feat: GET /users not contain initial passwords if they are unchanged
