# src/routes/user.ts
@@ -9,6 +9,7 @@ import logger from '../config/winston';
 import { QueryTypes } from 'sequelize';
 import { schemaName } from '../utils/common';
 import { sequelize } from '../db';
+import { compare } from 'bcrypt';
 
 export function createUsersRouter() {
     const router = express.Router();
@@ -24,7 +25,9 @@ export function createUsersRouter() {
                 `SELECT 
                     U."id", 
                     U."email", 
-                    O."name" organization_name, 
+                    O."name" organization_name,
+                    U."password",
+                    U."initialPassword",
                     U."role",
                     U."isDisabled"
                 FROM ${schemaName}."organizations" as O
@@ -33,7 +36,19 @@ export function createUsersRouter() {
                 ORDER BY O."name"`,
                 queryOptions,
             );
-            res.json(users);
+
+            const userReponse = [];
+            let user: any;
+            for (user of users) {
+                if (await compare(user.initialPassword, user.password)) {
+                    user.password = user.initialPassword;
+                } else {
+                    user.password = null;
+                }
+                delete user.initialPassword;
+                userReponse.push(user);
+            }
+            res.json(userReponse);
         }),
     );
 
@@ -58,6 +73,7 @@ export function createUsersRouter() {
             const user = await User.create({
                 email: req.body.email,
                 password: encrypted_password,
+                initialPassword: initial_password,
                 OrganizationId: organization.id,
             });
             res.json({
@@ -66,7 +82,7 @@ export function createUsersRouter() {
                 role: user.role,
                 is_disabled: user.isDisabled,
                 organization_id: organization.id,
-            })
+            });
         }),
     );
 
@@ -108,9 +124,14 @@ export function createUsersRouter() {
 
             const new_password = req.body.new_password;
             UserService.checkPasswordCondition(new_password);
+            UserService.checkNewPasswordNotChanged(
+                new_password,
+                req.body.password,
+            );
 
             const encrypted_password = await UserService.encrypt(new_password);
             user.password = encrypted_password;
+
             await user.save();
             res.sendStatus(200);
         }),
