# swagger/routes/user.yaml
@@ -182,6 +182,14 @@ definitions:
                 type: string
                 description: 이메일
                 example: example@kaist.ac.kr
+            organization_name:
+                type: string
+                description: 피감기관 이름
+                example: 감사원
+            password:
+                type: string
+                description: 비밀번호 (변경이 이루어졌다면 null, 처음 발급된 비밀번호라면 비밀번호가 노출됨)
+                example: abcdeABCDE!@
             role:
                 type: string
                 enum: ['user', 'admin']
@@ -191,17 +199,10 @@ definitions:
                 type: boolean
                 description: 계정 비활성화 여부
                 example: false
-            createdAt:
-                type: timestamp
-                description: 생성일자
-                example: 2020-01-01 00:00:00
-            updatedAt:
-                type: timestamp
-                description: 수정일자
-                example: 2020-01-01 00:00:00
         required:
+            - id
             - email
+            - organization_name
+            - password
             - role
             - isDisabled
-            - createdAt
-            - updatedAt
